# insta-mash-master

./: .gitignore  CLAUDE.md  README.md  TODO.md  main.py  pyproject.toml
.early.coverage/python/: coverage.json
.hypothesis/constants/: 1c8595f00b8cb119  1e3dabf3be49d323  2e297cde93c4a124  2f19c03914cc6d74  32d9a8a9c2d45bbd  7daafdf79b848f8e  9e4a3329d31eee62  b062c6a8c44a3dbe  d4c1a71953eabc42
.hypothesis/examples/04e6b3400353b141/: 5744d1ba0dc4e2a2  589aaa0726f54b8a  63f2f366ff3d8742  a35234a9ca63774b  e3d3ee617c746284  f4421d77d52298dd  f6599e5cd37f0333
.hypothesis/examples/5744d1ba0dc4e2a2/: 976a1b60541d02c4
.hypothesis/examples/63f2f366ff3d8742/: 2b983c9a25e071b7  5de4d5e8d78b7557  c07f643b0bb7d82f  da552ace12dbe4a4
.hypothesis/examples/a35234a9ca63774b/: bec8dd30d9a63943
.hypothesis/examples/e3d3ee617c746284/: 4a407f451d708650
.hypothesis/examples/f4421d77d52298dd/: 0b45e0f77453fa1c  2ade56dc0ce914a1  a7670379ea993714
.hypothesis/examples/f6599e5cd37f0333/: 1fe9cfe8092bd98d  341ed292c52c74ce  390672129e541163  4ed8ba095bf8abf7  6783c8fa2d5a3177  6cdb9242040c00cb  71cb084c2090443f  793b1eea973b6a4d  873139c644a4aa8b  87b0a10d474a935b  af3fec9dd92f468c  cd3ba9428a75b183  d52db1a074453242  dc8b2ec41c0bac0c  e4cb18ca31158b77  e586962a2d79ae48
.kiro/specs/: ORCHESTRATION_SUMMARY.md  START_HERE.md
.kiro/specs/batch-mode/: design.md  requirements.md  tasks.md
.kiro/specs/feature-completion-orchestration/: AGENT_INSTRUCTIONS.md  HANDOFF.md  design.md  requirements.md  tasks.md
.kiro/specs/post-download-hooks/: requirements.md
.kiro/specs/progress-display/: design.md  requirements.md  tasks.md
.kiro/specs/quality-audit-and-refinement/: AUDIT_PLAN.md  README.md  design.md  requirements.md  tasks.md
.kiro/specs/resume-support/: design.md  requirements.md  tasks.md
.kiro/specs/shell-completions/: requirements.md
.kiro/specs/smart-platform-detection/: design.md  requirements.md  tasks.md
docs/: CONFIG.md
src/: cli.py
src/insta_mash/: __init__.py  batch.py  cli.py  config.py  interactive.py
tests/: __init__.py  test_batch.py  test_config.py
